wso2ei/ei_service.yml
apiVersion: v1
kind: Service
metadata:
  name: ei-service
spec:
  type: NodePort
  selector:
    app: ei
  ports:
    - name: passthrough 
      protocol: TCP
      port: 8280
      targetPort: 8280
    - name: nio
      protocol: TCP
      port: 8243
      targetPort: 8243
    - name: https
      protocol: TCP
      port: 9443
      targetPort: 9443
